--- a/card.html
+++ b/card.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Animal Trading Cards</title>
-	<link href="styles.css" rel="stylesheet">
+	<link href="/css/styles.css" rel="stylesheet">
 </head>
 <body class="body">
 	<div class="main">
